[package]
name = "moq"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moq-server"
path = "src/bin/moq-server.rs"

[[bin]]
name = "moq-client"
path = "src/bin/moq-client.rs"

[dependencies]
wtransport = { version = "0.7", features = ["dangerous-configuration"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
