[package]
name = "moq"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "moq-server"
path = "src/bin/moq-server.rs"

[[bin]]
name = "moq-client"
path = "src/bin/moq-client.rs"

[dependencies]
wtransport = { version = "0.7", features = ["dangerous-configuration"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
image = "0.25"
sdl2 = "0.37"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_bytes = "0.11"
futures-util = "0.3"
